# wasmrun

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  OS_IMPLEMENTATION.md  README.md  build.rs  justfile  package.json
.github/workflows/: ci.yml  examples.yml  release-binaries.yml  test.yml  update-homebrew.yml
.rpm/: wasmrun.spec
docs/: README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts  tsconfig.json
docs/docs/: changelog.mdx  installation.md  intro.md  quick-start.md  troubleshooting.md
docs/docs/cli/: clean.md  compile.md  exec.md  index.md  inspect.md  os.md  overview.md  plugin.md  run.md  stop.md  verify.md
docs/docs/contributing/: architecture.md  changelog.mdx  debugging.md  how-to-contribute.md  index.md  troubleshooting.md
docs/docs/development/: architecture.md  contributing.md  creating-plugins.md  debugging.md
docs/docs/exec/: agent.md  features.md  index.md  languages.md  wasi.md
docs/docs/features/: live-reload.md  native-execution.md  os-mode.md  plugin-system.md  port-forwarding.md  wasi-support.md
docs/docs/guides/: assemblyscript.md  c-cpp.md  go.md  python.md
docs/docs/integrations/: wasi.md
docs/docs/os/: features.md  index.md  network-isolation.md  port-forwarding.md  public-tunneling.md
docs/docs/plugins/: c-cpp.md  creating-plugins.md  index.md  index.mdx  usage.md  wasmasc.md  wasmgo.md  wasmrust.md
docs/docs/server/: features.md  index.md  live-reload.md
docs/docs/wasmhub/: cli.md  getting-started.md  index.md  library.md  runtimes.md
docs/docs/web/: index.md
docs/src/: theme.d.ts
docs/src/components/: Changelog.module.css  Changelog.tsx  CommandDemo.module.css  CommandDemo.tsx  InstallTabs.tsx  PluginCard.module.css  PluginCard.tsx
docs/src/css/: custom.css
docs/src/pages/: changelog.mdx  community.module.css  community.tsx  index.module.css  index.tsx
docs/static/: robots.txt
docs/versioned_docs/version-0.15.0/: quick-start.md
docs/versioned_sidebars/: version-0.15.0-sidebars.json
examples/: README.md
examples/agent-flows/: README.md  npm-dependencies.sh  typescript-project.sh
examples/asc-hello/: README.md  asconfig.json  package.json
examples/asc-hello/assembly/: index.ts
examples/c-hello/: Makefile  README.md  main.c
examples/go-hello/: README.md  main.go  main.wasm
examples/native-go/: go.mod  main.go
examples/native-rust/: Cargo.toml
examples/native-rust/src/: main.rs
examples/nodejs-express-api/: .gitignore  README.md  index.js  package.json
examples/nodejs-express-api/public/: index.html
examples/python-hello/: README.md  main.py  requirements.txt
examples/rust-hello/: Cargo.toml  README.md
examples/rust-hello/src/: lib.rs
examples/web-asc/: README.md  asconfig.json  index.html  package.json
examples/web-asc/assembly/: index.ts
examples/web-leptos/: Cargo.toml  README.md  index.html
examples/web-leptos/src/: lib.rs
src/: cli.rs  debug.rs  error.rs  main.rs  server.rs  template.rs  ui.rs  utils.rs  verify.rs  watcher.rs
src/agent/: api.rs  auth.rs  executor.rs  limits.rs  metrics.rs  mod.rs  server.rs  session.rs  shell.rs  tools.rs  vendor.rs
src/commands/: agent.rs  clean.rs  compile.rs  exec.rs  init.rs  inspect.rs  issue_detector.rs  mod.rs  module_display.rs  os.rs  plugin.rs  run.rs  stop.rs  verify.rs
src/compiler/: builder.rs  detect.rs  mod.rs
src/compiler/language/: asc.rs  c.rs  go.rs  mod.rs  python.rs  rust.rs
src/config/: constants.rs  mod.rs  server.rs
src/logging/: log_entry.rs  mod.rs  system.rs
src/plugin/: bridge.rs  builtin.rs  config.rs  external.rs  installer.rs  manager.rs  metadata.rs  mod.rs  protocol.rs  registry.rs
src/plugin/languages/: asc_plugin.rs  assemblyscript_plugin.rs  c_plugin.rs  go_plugin.rs  mod.rs  python_plugin.rs  rust_plugin.rs
src/runtime/: dev_server.rs  microkernel.rs  mod.rs  multilang_kernel.rs  network_namespace.rs  os_server.rs  project_files.rs  registry.rs  runtime_cache.rs  scheduler.rs  syscalls.rs  wasi_fs.rs
src/runtime/core/: control_flow.rs  executor.rs  linker.rs  memory.rs  mod.rs  module.rs  native_executor.rs  tests.rs  values.rs
src/runtime/languages/: go.rs  mod.rs  nodejs.rs  python.rs  traits.rs
src/runtime/tunnel/: bore.rs  mod.rs
src/runtime/wasi/: mod.rs  syscalls.rs
src/server/: api.rs  config.rs  handler.rs  lifecycle.rs  mod.rs  runner.rs  utils.rs  wasm.rs  webapp.rs
src/template/: mod.rs
src/template/server/: chakra_wasi_impl.js  index.html  mod.rs  scripts.js  style.css  wasmrun_wasi_impl.js
src/template/webapp/: index.html  mod.rs  scripts.js  style.css
src/utils/: command.rs  mod.rs  path.rs  plugin_utils.rs  system.rs  wasm_analysis.rs
templates/app/: index.html  scripts.js  style.css
tests/: exec_integration_tests.rs
ui/: .eslintrc.cjs  .prettierrc.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/app/: App.tsx  index.html  (+1 more)
(+87 files in other folders)
