[package]
name = "wasmrun"
version = "0.12.1"
edition = "2021"
description = "A WebAssembly Runtime"
license = "MIT"
authors = ["Kumar Anirudha <wasmrun@anirudha.dev>"]
repository = "https://github.com/anistark/wasmrun"
readme = "README.md"
keywords = ["wasm", "webassembly", "browser", "runtime", "cli"]
categories = ["command-line-utilities", "development-tools", "wasm"]
include = ["src/**", "templates/**", "assets/**", "build.rs", "Cargo.toml", "README.md", "LICENSE"]
documentation = "https://docs.rs/wasmrun"
rust-version = "1.70.0"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
tiny_http = "0.12"
webbrowser = "1.0.5"
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
thiserror = "1.0"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
dirs = "6.0.0"
serde_json = "1.0.145"
libloading = "0.8.9"
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.11.3"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libloading = "0.8"

[dev-dependencies]
tempfile = "3.23.0"

[build-dependencies]
regex = "1.11.2"

[[bin]]
name = "wasmrun"
