[package]
name = "wasmrun"
version = "0.15.1"
edition = "2021"
description = "A WebAssembly Runtime"
license = "MIT"
authors = ["Kumar Anirudha <wasmrun@anirudha.dev>", "Farhaan Bukhsh"]
repository = "https://github.com/anistark/wasmrun"
readme = "README.md"
keywords = ["wasm", "webassembly", "browser", "runtime", "cli"]
categories = ["command-line-utilities", "development-tools", "wasm"]
include = ["src/**", "templates/**", "assets/**", "build.rs", "Cargo.toml", "README.md", "LICENSE"]
documentation = "https://docs.rs/wasmrun"
rust-version = "1.70.0"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
tiny_http = "0.12"
webbrowser = "1.0.6"
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
thiserror = "1.0"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
dirs = "6.0.0"
serde_json = "1.0.148"
libloading = "0.9.0"
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
tempfile = "3.24.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libloading = "0.9.0"

[dev-dependencies]
tempfile = "3.24.0"
ureq = "3.0"

[build-dependencies]
regex = "1.11.2"

[[bin]]
name = "wasmrun"

[package.metadata.deb]
maintainer = "Kumar Anirudha <wasmrun@anirudha.dev>"
copyright = "2025, Kumar Anirudha"
extended-description = """A WebAssembly runtime that brings WASM to the command line with built-in UI support for running, debugging, and managing WebAssembly modules."""
depends = "$auto"
section = "utility"
assets = [
  ["target/release/wasmrun", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/wasmrun/", "644"],
  ["LICENSE", "usr/share/doc/wasmrun/", "644"],
]

[package.metadata.rpm]
package = "wasmrun"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
wasmrun = { path = "/usr/bin/wasmrun" }
